2012-09-11  SAncho Lerena <slerena@artica.es>

	* operation/download/browse.php: Allow to edit a file release
	without modifiyng the filename. Filename will never be editable.

2012-09-11  Sergio Martin <sergio.martin@artica.es>

	* operation/projects/task_detail.php: Fixed force percent of
	completion of one task

2012-09-10  Sancho Lerena <slerena@artica.es>

	* index.php: Fixed problem with password recovery (OpenSource)

2012-09-06  Sancho Lerena <slerena@artica.es>

	* include/functions_xmlrpc.php: Removed.

	* include/xmlrpc: Removed.

	* include/integria_cron.php: Removed function to delete data from 
	user audit.

	* include/integria_xmlrpc_api.php: deleted.

	* integria_dbdata.sql,
	integria_demo.sql: Deleted SQL code used for user audit.

	* godmode/usuarios/lista_usuarios.php: Deleted deletion on user
	audit tables. Now user deletion doesn't give an error

2012-09-05  Sancho Lerena <slerena@artica.es>

	* upgrade_to_3.0.sql,
	integria_db.sql: removed old sql code for app audit.

	* images/small_arrow_right_green.gif: New icon for child tasks.
	
	* images/headerbg-grey.gif,
	  images/loginform.png
	  images/leftnav_bg_uncollapsible.gif
      general/footer.php
      general/login_page.php
      general/header.php
      include/styles/integria.css: Aesthetic changes.
      
	* include/functions_form.php: combo_users_task() now have width as optional
	parameter.
	
	* include/integria_cron.php: Added function to delete temp files.

	* include/functions_html.php: print_select() have an optional parameter to
	enter custom CSS style and put a default width for the control. This is used
	by combo_users_tasks() between others.

	* index.php: Added some comments and fixed problem with "1px width/horizontal
	scrollbar always on" on fullscreen.

	* operation/projects/task.php, 
	operation/projects/task_planning.php: Minor esthetic/usability changes.


2012-09-03  Sancho Lerena <slerena@artica.es>

	* operation/side_menu.php: Added password policy entry.