@@ -1,3 +1,10 @@
+2012-09-13  Sancho Lerena <slerena@artica.es>
+
+	* operation/incidents/incident_detail.php,
+	include/functions_workunits.php: WU Created on incident don't
+	send email. Modified function to create wu to optionally supress
+	email sending.
+
 2012-09-11  SAncho Lerena <slerena@artica.es>
 
 	* operation/download/browse.php: Allow to edit a file release
